# brown-box

./: setup.cfg  setup.py
brown_box/cost_functions/: __init__.py  expected_improvement.py  negative_expected_improvement.py  negative_probability_of_improvement.py  negative_upper_confidence_bound.py  probability_of_improvement.py  upper_confidence_bound.py
brown_box/meta_optimizers/: __init__.py  geneticSearch.py  random_optimizer.py  scipy_optimizer.py
brown_box/meta_optimizers/test/: test_geneticSearch.py
brown_box/optimizers/: __init__.py  brown_box_abstract_optimizer.py  combined_optimizer.py  genetic_algorithm_gp_real.py  markov_gp.py  markov_gp_real.py  multi_gp.py  multi_gp_ei.py
brown_box/utils/: __init__.py  discrete_kernel.py  hyper_transformer.py  qops.py
examples/: try_scikit_discrete.ipynb
notebooks/: analyze_ucb.ipy  discrete_simple_problem.ipy  initial_population.ipy  inspect_gp_model.ipy  inspect_results.ipy  kernel_optimizations.ipy  plot_mean_score.ipynb  plot_test_case.ipynb  simple_problem.ipy  step_by_step.ipy  try_scikit.ipynb
notebooks/plot_utils/: pyplot_plots.py
test/: test_hyper_transformer.py  test_qops.py
