[metadata]
name = brown_box
version = 202011242200
description = Classes and implementations for brown box team
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
packages = find:
install_requires =
    scikit-learn
    scikit-optimize
